--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -5,9 +5,9 @@
         "jest": true
     },
     "extends": [
-       "standard-with-typescript"
+        "standard-with-typescript"
     ],
-    "ignorePatterns": "**/*.js",
+    "ignorePatterns": ["**/*.js", "**/*.test.ts","**/*.spec.ts"],
     "parser": "@typescript-eslint/parser",
     "parserOptions": {
         "ecmaVersion": 12,
@@ -18,7 +18,6 @@
         "@typescript-eslint"
     ],
     "rules": {
-        "@typescript-eslint/strict-boolean-expressions": 0,
-        "@typescript-eslint/explicit-function-return-type": 1
+        "@typescript-eslint/strict-boolean-expressions": 0
     }
 }
